--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-hi
+<html>
+        <head>
+        <title> HTML body Bgcolr Attribute </title>
+        <head/>
+
+        <body text="black" bgcolor="pink">
+        <center><br><br><br><br><br><br>
+
+        <h1> Hi All </h1>
+        <h2>
+
+         This is demo project I have made for the practice
+         <h2>
+
+        </center>
+        </body>
+
+</html>
