--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title> HTML body Bgcolr Attribute </title>
         <head/>
 
-        <body text="black" bgcolor="pink">
+        <body text="black" bgcolor="orange">
         <center><br><br><br><br><br><br>
 
         <h1> Hi All </h1>
