--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1> Hi All </h1>
         <h2>
 
-         This is demo project I have made for the practice
+         demo project I have made for the practice
          <h2>
 
         </center>
