--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
         <title> HTML body Bgcolr Attribute </title>
         <head/>
 
-        <body text="black" bgcolor="orange">
+        <body text="black" bgcolor="white">
         <center><br><br><br><br><br><br>
 
         <h1> Hi All </h1>
         <h2>
 
-         demo project I have made for the practice
+         Demo project just for the purpose of practice
          <h2>
 
         </center>
