--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-        <head>
+        <head></head>
         <title> HTML body Bgcolr Attribute </title>
         <head/>
 
@@ -9,7 +9,7 @@
         <h1> Hi All </h1>
         <h2>
 
-         Created demo project just for the purpose of practice
+         created demo project for practice purpose
          <h2>
 
         </center>
